<resources>
    <string name="app_name">linkedin_Clone</string>
    <string name="name">Name</string>
    <string name="Number">Phone-Number</string>
    <string name="Contact_information">Contact Information</string>
    <string name="user_name">linkedin_Clone</string>
    <string name="resume">Resume</string>
    <string name="edit_resume">Edit Resume</string>
    <string name="preview_resume">Preview Resume</string>
    <string name="user_skills_description">Android Developer|Kotlin|Java|GDG on campus</string>
    <string name="user_status_description">Actively seeking summer internship opportunities starting in May 2025.</string>
    <string name="user_location">Google Developers Group · Long Island University
United States</string>
    <string name="user_website">Website</string>
    <string name="user_followers">1,300 followers · 500+ connections</string>
    <string name="user_open_to">Open to</string>
    <string name="user_enhance_profile">Enhance profile</string>
    <string name="user_add_section">Add section</string>
    <string name="user_more_options">More options</string>
    <string name="user_settings">Settings</string>
    <string name="search_bar_hint">Search</string>
    <string name="Analytics">Analytics</string>
    <string name="Resources">Resources</string>
    <string name="Resume">Resume</string>
    <string name="Confirmandsubmit">Confirm and submit </string>
    <string name="About">About</string>
    <string name="profile_views">Profile views</string>
    <string name="post_impression">Post impression</string>
    <string name="search_appearances">Search appearances</string>
    <string name="Network_views">Network views</string>
    <string name="Network_impression">Network impression</string>
    <string name="profile_views_count">84 profile views</string>
    <string name="profile_views_hint">Discover who viewd your profile</string>

    <string name="post_impression_count">84 profile views</string>
    <string name="btn_edit"> Edit</string>
    <string name="post_impression_hint">Discover who viewed your profile</string>
    <string name="search_appearances_hint">Discover who viewed your profile</string>
    <string name="Network_views_hint">Discover who viewed your profile</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Information">Information</string>

    <!--- Login/Register -->
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Signup">Signup</string>
    <string name="OR">OR</string>
    <string name="NoAccount">Don\'t have account?Click to Signup </string>
    <string name="LoginAccount">Already have an account?Login</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_user_feature_section">user_FeatureSection</string>
    <string name="title_activity_user_home_page">userHomePage</string>
    <string name="title_activity_user_home">user_HomeActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="liu_brooklyn">LIU Brooklyn</string>
    <string name="title_activity_user_profile_header">UserProfileHeader</string>
</resources>