<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".uiElements.user_informationSection">

    <!-- Section: Analytics -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Analytics"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="?attr/colorOnBackground"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <ImageView
                android:id="@+id/icon_profile_views"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_add"
                android:tint="@color/light_blue_600"
                tools:ignore="DuplicateIds,UseAppTint" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="12dp">

                <TextView
                    android:id="@+id/text_profile_views_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_impression_count"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textColor="?attr/colorOnBackground"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_profile_views_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_impression_hint"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:textColor="?attr/colorOnBackground" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <ImageView
                android:id="@+id/icon_post_impression"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_add"
                android:tint="@color/light_blue_600" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="12dp">

                <TextView
                    android:id="@+id/text_post_impression"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="84 profile views"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textColor="?attr/colorOnBackground"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_subtext_profile_impression"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Discover who viewed your profile"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:textColor="?attr/colorOnBackground" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Section: Resources -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Resources"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="?attr/colorOnBackground"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <ImageView
                android:id="@+id/icon_network_views"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_add"
                android:tint="@color/light_blue_600" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="12dp">

                <TextView
                    android:id="@+id/text_network_views_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_impression"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textColor="?attr/colorOnBackground"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_network_views_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_impression_hint"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:textColor="?attr/colorOnBackground" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <ImageView
                android:id="@+id/icon_resource2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_add"
                android:tint="@color/light_blue_600" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="12dp">

                <TextView
                    android:id="@+id/text_network_impression"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_impression_count"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textColor="?attr/colorOnBackground"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_network_profile_impression"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_impression_hint"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:textColor="?attr/colorOnBackground" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Section: About -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/About"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="?attr/colorOnBackground"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="100dp"
            android:maxLines="4"
            android:text="@string/lorem_ipsum"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="?attr/colorOnBackground"
            android:textAlignment="textStart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:paddingTop="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/colorSurfaceVariant"
                android:padding="12dp">

                <TextView
                    android:id="@+id/btn_Edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_edit"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/icon_edit"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="12dp"
                android:scaleX="-1"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_back"
                android:tint="@color/light_blue_600"
                tools:ignore="ContentDescription,UseAppTint" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
